--- a/style.css
+++ b/style.css
@@ -43,7 +43,19 @@
     letter-spacing: 0px;
     text-align: center;
 }
+.navbar-nav{
+    margin-left: 20px;
+}
 
+
+.logo{
+    width: 50px;
+    filter: brightness(150%);
+    margin-left: 50px;
+    height: 50px;
+    border-radius: 50%;
+    -webkit-filter: brightness(150%);
+}
 .card_tit {
     color: rgb(173, 52, 62);
     font-family: DM Sans;
