--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 
-
 .flex {
     display: flex;
     flex-wrap: wrap;
@@ -21,6 +20,7 @@
 .cards{
     margin-left: 130px;
 }
+
 .card_imgin {
     width: 150px;
     height: 200px;
@@ -139,7 +139,7 @@
     margin-top: 80px;
 }
 header{
-    margin-bottom: 190px;
+    margin-bottom: 100px;
 }
 .flip-box .inner {
     position: absolute;
@@ -161,3 +161,40 @@ header{
 .carousel-caption {}
 
 
+/* Скрыть модальное окно по умолчанию */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+  }
+  
+  /* Стилизация содержимого модального окна */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  /* Закрывающая кнопка */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
