--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@
     margin-top: 80px;
 }
 header{
-    margin-bottom: 190px;
+    margin-bottom: 100px;
 }
 .flip-box .inner {
     position: absolute;
@@ -384,9 +384,7 @@ header{
   }
   
   
-  .progress{
-    height: auto;
-  }
+  
   .sie {
     --p: 90;
     --b: 22px;
@@ -416,7 +414,6 @@ header{
     display: flex;
     gap: 48px;
     flex-wrap: wrap;
-    justify-content: space-between;
   }
   
   .znak {
@@ -478,4 +475,92 @@ header{
       --p: 0
     }
   }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .logo {
+    margin: 24px 0;
+  }
+  
+  .logo__img {
+    width: 216px;
+    height: 38px;
+  }
+  
+  .accordeon {
+    width: 100%;
+  }
+  
+  .questions-tit{
+    text-align: center;
+    margin-bottom: 50px;
+    font-family: "Lobster";
+    color: #02C37E ;
+  }
+
+  .accordeon__item {
+    background: #e7e7e7;
+    border-radius: 22px;
+    margin-bottom: 6px;
+  }
+  
+  .accordeon__button {
+    position: relative;
+    background:  #02C37E ;
+    color: #fff;
+    padding: 15px 22px;
+    border-radius: 22px;
+    cursor: pointer;
+  
+    &:after {
+      content: '';
+      position: absolute;
+      right: 20px;
+      bottom: 5px;
+      border: 8px solid transparent;
+      border-top: 14px solid #CCF3E5 ;
+      border-bottom: 14px solid transparent;
+      transition: border-bottom .5s ease, border-top .5s ease, bottom .5s ease;
+    }
+  }
+  
+  .accordeon__item:nth-child(2n) .accordeon__button{
+    background: #e7e7e7;
+    color: #2f70af ;
+  }
+  
+  .accordeon__item:nth-child(2n) .accordeon__button.active{
+    background: #6795c4 ;
+    color: #ffffff;
+  }
+  
+  .accordeon__panel {
+    color: #2f70af ;
+    border-radius: 22px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height .5s ease;
+  }
+  
+  .panel__text{
+    list-style-type: none;
+    padding: 10px 30px;
+    color: #4f4f4f;
+  }
+  
+  .active {
+    background: #76aadf ;
+    color: #ffffff;
+  
+    &:after {
+      bottom: 20px;
+      border-top:  14px solid transparent;
+      border-bottom: 14px solid #ffffff;
+    }
+  }
+  
   
